--- a/portraits.html
+++ b/portraits.html
@@ -40,32 +40,32 @@
             </a>
        </nav>
         <div class="gallery">
-                    <img src="images/gal/portrait1.jpg">
-                    <img src="images/gal/portrait2.jpg">
-                    <img src="images/gal/portrait3.jpg">
-                    <img src="images/gal/portrait4.jpg">
-                    <img src="images/gal/portrait5.jpg">
-                    <img src="images/gal/portrait6.jpg">
-                    <img src="images/gal/portrait7.jpg">
-                    <img src="images/gal/portrait8.jpg">
-                    <img src="images/gal/portrait9.jpg">
-                    <img src="images/gal/portrait10.jpg">
-                    <img src="images/gal/portrait11.jpg">
-                    <img src="images/gal/portrait12.jpg">
-                    <img src="images/gal/portrait13.jpg">
-                    <img src="images/gal/portrait14.jpg">
-                    <img src="images/gal/portrait15.jpg">
-                    <img src="images/gal/portrait16.jpg">
-                    <img src="images/gal/portrait17.jpg">
-                    <img src="images/gal/portrait18.jpg">
-                    <img src="images/gal/portrait19.jpg">
-                    <img src="images/gal/portrait20.jpg">
-                    <img src="images/gal/portrait21.jpg">
-                    <img src="images/gal/portrait22.jpg">
-                    <img src="images/gal/portrait23.jpg">
-                    <img src="images/gal/portrait24.jpg">
-                    <img src="images/gal/portrait25.jpg">
-                    <img src="images/gal/portrait26.jpg">
+                    <img src="images/jpeg/portrait1.jpeg">
+                    <img src="images/jpeg/portrait2.jpeg">
+                    <img src="images/jpeg/portrait3.jpeg">
+                    <img src="images/jpeg/portrait4.jpeg">
+                    <img src="images/jpeg/portrait5.jpeg">
+                    <img src="images/jpeg/portrait6.jpeg">
+                    <img src="images/jpeg/portrait7.jpeg">
+                    <img src="images/jpeg/portrait8.jpeg">
+                    <img src="images/jpeg/portrait9.jpeg">
+                    <img src="images/jpeg/portrait10.jpeg">
+                    <img src="images/jpeg/portrait11.jpeg">
+                    <img src="images/jpeg/portrait12.jpeg">
+                    <img src="images/jpeg/portrait13.jpeg">
+                    <img src="images/jpeg/portrait14.jpeg">
+                    <img src="images/jpeg/portrait15.jpeg">
+                    <img src="images/jpeg/portrait16.jpeg">
+                    <img src="images/jpeg/portrait17.jpeg">
+                    <img src="images/jpeg/portrait18.jpeg">
+                    <img src="images/jpeg/portrait19.jpeg">
+                    <img src="images/jpeg/portrait20.jpeg">
+                    <img src="images/jpeg/portrait21.jpeg">
+                    <img src="images/jpeg/portrait22.jpeg">
+                    <img src="images/jpeg/portrait23.jpeg">
+                    <img src="images/jpeg/portrait24.jpeg">
+                    <img src="images/jpeg/portrait25.jpeg">
+                    <img src="images/jpeg/portrait26.jpeg">
         </div>
    </header> 
    
